--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Puissance 4</title>
 </head>
 <body>
+    <div id="game">
+        <table>
+            <tr>
+                <td data-column="0"></td>
+                <td data-column="1"></td>
+                <td data-column="2"></td>
+                <td data-column="3"></td>
+                <td data-column="4"></td>
+                <td data-column="5"></td>
+                <td data-column="6"></td>
+            </tr>
+        </table>
+    </div>
     
 </body>
 </html>
