--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Puissance 4</title>
 </head>
 <body>
+
     
-<script src="main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
