rajout des joueurs

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 <body>
     <div class="container-fluid">
         <div class="container">
-            <div class="text-center"><p>QUE LE MEILLEUR GAGNE</p></div>
+            <div class="text-center mt-lg-3"><p>QUE LE MEILLEUR GAGNE</p></div>
             <div class="row d-flex align-items-center justify-content-center">
-                <div class="col-1 player-1"></div>
+                <div class="col-1 player-1 text-center">
+                    <p class="joueur">JOUEUR <br>1</p>
+                </div>
                 <div id="game" class="col-10">
-                    <table>
+                    <table class="">
                         <tr>
                             <td data-column="0"></td>
                             <td data-column="1"></td>
@@ -76,7 +78,7 @@
                         </tr>
                     </table>
                 </div>
-                <div class="col-1 player-1"></div>
+                <div class="col-1 player-1"> <p class="joueur">JOUEUR <br>2</p></div>
             </div>
         </div>
     </div>
