--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </tr>
                     </table>
                 </div>
-                <div class="col-1 player-1"> <p class="joueur">JOUEUR <br>2</p></div>
+                <div class="col-1 player-1 text-center"> <p class="joueur">JOUEUR <br>2</p></div>
             </div>
         </div>
     </div>
