--- a/index.html
+++ b/index.html
@@ -15,7 +15,36 @@
 <body>
     <div class="container-fluid">
         <div class="container">
-            <div class="text-center mt-lg-3"><p>QUE LE MEILLEUR GAGNE</p></div>
+            <div class="text-center mt-lg-3"><p>
+                <span>Q</span>
+                <span>U</span>
+                <span>E</span>
+                <span> </span>
+                <span>L</span>
+                <span>E</span>
+                <span> </span>
+                <span>M</span>
+                <span>E</span>
+                <span>I</span>
+                <span>L</span>
+                <span>L</span>
+                <span>E</span>
+                <span>U</span>
+                <span>R</span>
+                <span> </span>
+                <span>G</span>
+                <span>A</span>
+                <span>G</span>
+                <span>N</span>
+                <span>E</span>
+
+
+
+
+
+
+
+            </p></div>
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="col-1 player-1 text-center">
                     <p class="joueur">JOUEUR <br>1</p>
