deleted animation bounce rodrigue

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="text-center mt-lg-3"><p>QUE LE MEILLEUR GAGNE</p></div>
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="col-1 player-1 text-center">
-                    <p class="joueur1">JOUEUR <br>1</p>
+                    <p class="joueur1">J1</p>
                 </div>
                 <div id="game" class="col-10">
                     <table class="grille-jeux">
@@ -87,7 +87,7 @@
                         </tr>
                     </table>
                 </div>
-                <div class="col-1 player-1 text-center"> <p class="joueur2">JOUEUR <br>2</p></div>
+                <div class="col-1 player-1 text-center"> <p class="joueur2">J2</p></div>
             </div>
         </div>
     </div>
