Ajout de l'index

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     </head>
 
 <body class="bg-jv">
+    <!-- header -->
+    <nav class="navbar navbar-light bg-dark">
+        <a class="navbar-brand" href="index.html">
+            <img src="media/logo.png" width="30" height="30" class="d-inline-block align-top" alt="logo">
+            <span class="text-light font-weight-bold text-uppercase">Puissance 4</span>
+        </a>
+    </nav>
+    
     <div class="container-fluid">
         <div class="container">
             <div class="text-center mt-lg-3"><p>QUE LE MEILLEUR GAGNE</p></div>
