--- a/index.html
+++ b/index.html
@@ -15,44 +15,17 @@
 <body>
     <div class="container-fluid">
         <div class="container">
-            <div class="text-center mt-lg-3"><p>
-                <span>Q</span>
-                <span>U</span>
-                <span>E</span>
-                <span> </span>
-                <span>L</span>
-                <span>E</span>
-                <span> </span>
-                <span>M</span>
-                <span>E</span>
-                <span>I</span>
-                <span>L</span>
-                <span>L</span>
-                <span>E</span>
-                <span>U</span>
-                <span>R</span>
-                <span> </span>
-                <span>G</span>
-                <span>A</span>
-                <span>G</span>
-                <span>N</span>
-                <span>E</span>
-
-
-
-
-
-
-
-            </p></div>
+            <div class="text-center mt-lg-3 animated-bounce">
+                <p class="go">QUE LE MEILLEUR GAGNE</p>
+            </div>
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="col-1 player-1 text-center">
                     <p class="joueur">JOUEUR <br>1</p>
                 </div>
-                <div id="game" class="col-10">
+                <div id="game" class="col-10 ">
                     <table class="">
-                        <tr>
-                            <td data-column="0"></td>
+                        <tr class="">
+                            <td  class="round-white" data-column="0"></td>
                             <td data-column="1"></td>
                             <td data-column="2"></td>
                             <td data-column="3"></td>
@@ -107,9 +80,16 @@
                         </tr>
                     </table>
                 </div>
-                <div class="col-1 player-1 text-center"> <p class="joueur">JOUEUR <br>2</p></div>
+                <div class="col-1 player-1 text-center">
+                    <p class="joueur">JOUEUR<br>2</p>
+                </div>
             </div>
         </div>
+    </div>
+    <div class="text-center pt-lg-3">
+        <button class="btn">
+            <p class="joueur pr-lg-4">GO</p>
+        </button>
     </div>
 
 
