Index bouton link none

--- a/index.html
+++ b/index.html
@@ -65,12 +65,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-6 text-center mt-5 mb-5">
-                    <button type="button" class="btn btn-danger btn-lg shadow-sm animated-bounce btn-block">J1 VS
-                        J2</button>
+                    <button type="button" class="btn btn-danger btn-lg shadow-sm animated-bounce btn-block"><a href="player-player.html" class="text-reset">J1 VS J2</a></button>
                 </div>
                 <div class="col-6 text-center mt-5 mb-5">
-                    <button type="button"
-                        class="btn btn-warning text-light btn-lg shadow-sm animated-bounce btn-block">J1 VS IA</button>
+                    <button type="button" class="btn btn-warning text-light btn-lg shadow-sm animated-bounce btn-block"><a href="player-ia.html" class="text-reset">J1 VS IA</a></button>
                 </div>
             </div>
         </div>
