--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="fr">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Puissance 4</title>
 </head>
+
 <body class="bg-jv">
 
     <!-- header -->
@@ -59,16 +61,19 @@
             </div>
         </div>
     </div>
-    
+
     <!-- choose mode -->
     <div class="container-fluid">
         <div class="container">
             <div class="row">
                 <div class="col-6 text-center mt-5 mb-5">
-                    <a href="player-player.html" class="text-decoration-none"><button type="button" class="btn btn-danger btn-lg shadow-sm animated-bounce btn-block">J1 VS J2</button></a>
+                    <a href="player-player.html" class="text-decoration-none"><button type="button"
+                            class="btn btn-danger btn-lg shadow-sm animated-bounce btn-block">J1 VS J2</button></a>
                 </div>
                 <div class="col-6 text-center mt-5 mb-5">
-                    <a href="player-ia.html" class="text-decoration-none"><button type="button" class="btn btn-warning text-light btn-lg shadow-sm animated-bounce btn-block">J1 VS IA</button></a>
+                    <a href="player-ia.html" class="text-decoration-none"><button type="button"
+                            class="btn btn-warning text-light btn-lg shadow-sm animated-bounce btn-block">J1 VS
+                            IA</button></a>
                 </div>
             </div>
         </div>
@@ -86,4 +91,5 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
