--- a/player-player.html
+++ b/player-player.html
@@ -30,9 +30,9 @@
     
     <div class="container-fluid">
         <div class="container">
-            <div class="text-center mt-lg-3"><p>QUE LE MEILLEUR GAGNE</p></div>
+            <div class="text-center mt-lg-3 go"><p>QUE LE MEILLEUR GAGNE</p></div>
             <div class="row d-flex align-items-center justify-content-center">
-                <div class="col-1 player-1 text-center">
+                <div class="col-1 player text-center">
                     <p class="joueur1">J1</p>
                 </div>
                 <div id="game" class="col-10">
@@ -95,13 +95,13 @@
                         </tr>
                     </table>
                 </div>
-                <div class="col-1 player-1 text-center"> <p class="joueur2">J2</p></div>
+                <div class="col-1 player text-center"> <p class="joueur2">J2</p></div>
             </div>
         </div>
     </div>
     <div class="text-center pt-lg-3">
         <button class="btn-go">
-            <p class="joueur pr-lg-4">GO</p>
+            <p class="joueur pr-lg-4 pl-lg-4">GO</p>
         </button>
     </div>
 
