Ajout function reset & gagner js

--- a/player-player.html
+++ b/player-player.html
@@ -95,6 +95,7 @@
                         </tr>
                     </table>
                 </div>
+                <div class="resultat d-none"></div>
                 <div class="col-1 player-1 text-center"> <p class="joueur2">J2</p></div>
             </div>
         </div>
