logo change + media queries

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <!-- header -->
     <nav class="navbar navbar-light bg-dark">
         <a class="navbar-brand" href="index.html">
-            <img src="media/logo.png" width="30" height="30" class="d-inline-block align-top" alt="logo">
-            <span class="text-light font-weight-bold text-uppercase">Puissance 4</span>
+            <img src="media/logo.png" width="200" height="34" class="d-inline-block align-top" alt="logo">
+            <span class="text-light font-weight-bold text-uppercase"></span>
         </a>
     </nav>
-
+        
     <!-- ready to play -->
     <div class="container-fluid">
         <div class="container pt-5">
