--- a/player-player.html
+++ b/player-player.html
@@ -16,15 +16,15 @@
     <!-- header -->
     <nav class="navbar navbar-light bg-dark">
         <a class="navbar-brand" href="index.html">
-            <img src="media/logo.png" width="30" height="30" class="d-inline-block align-top" alt="logo">
-            <span class="text-light font-weight-bold text-uppercase">Puissance 4</span>
+            <img src="media/logo.png" width="200" height="34" class="d-inline-block align-top" alt="logo">
+            <span class="text-light font-weight-bold text-uppercase"></span>
         </a>
     </nav>
     
     <div class="container-fluid">
         <div class="container">
             <div class="text-center mt-lg-3 go">
-                <p>QUE LE MEILLEUR GAGNE</p>
+                <p><img src="../root/media/title-meilleur.png" alt="Que le meilleur gagne" width="915" height="113" class="img-fluid"</p>
             </div>
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="col-10 col-sm-1 col-md-1 col-lg-1 player text-center mb-3 mb-sm-0 mb-md-0 mb-lg-0">
@@ -97,9 +97,11 @@
         </div>
     </div>
     <div class="container-fluid text-center pt-lg-3">
-        <button class="btn-go">
-            <p class="joueur pr-lg-4 pl-lg-4">GO</p>
-        </button>
+        <div class="container">
+            <button class="btn-go" Onclick="javascript:window.history.go(0)">
+                <p class="joueur pr-lg-4 pl-lg-4">Recommencer la partie</p>
+            </button>
+        </div>
     </div>
 
 
