--- a/player-player.html
+++ b/player-player.html
@@ -91,7 +91,7 @@
                     </table>
                 </div>
                 <div class="resultat d-none"></div>
-                <div class="col-10 col-sm-1 col-md-1 col-lg-1 player-1 text-center mt-3 mt-sm-0 mt-md-0 mt-lg-0"> 
+                <div class="col-10 col-sm-1 col-md-1 col-lg-1 player-1 player text-center mt-3 mt-sm-0 mt-md-0 mt-lg-0"> 
                     <p class="joueur2">J2</p>
                 </div>
             </div>
@@ -104,8 +104,6 @@
             </button>
         </div>
     </div>
-
-
 
     <script src="js/main.js"></script>
 </body>
