--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Une partie de Puissance 4 ? Venez affronter vos amis sur notre nouveau jeu fraîchement développé ou bien mettez à l'épreuve notre IA spécialement conçue.">
+    <meta name="robots" content="all">
+    <meta name="author" content="Eric Aurélie Rodrigue Rayan">
+    <meta name="keywords" content="Jeu, Puissance 4, Javascript, Puiss4nce, Plateau, Multijoueur, Local, IA, Pions, Familiale, Enfant, Développement, Plateau">
+    <!-- Facebook -->
+    <meta property="og:locale" content="fr_FR">
+    <meta property="og:url" content="http://rayans.promo-vesoul33.codeur.online/puiss4nce/index.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Une partie de Puissance 4 ?">
+    <meta property="og:description" content="Venez affronter vos amis sur notre nouveau jeu fraîchement développé ou bien mettez à l'épreuve notre IA spécialement conçue.">
+    <meta property="og:site_name" content="Puiss4nce">
+    <meta property="og:image" content="http://rayans.promo-vesoul33.codeur.online/puiss4nce/media/thumbnail.png">
+    <meta property="og:image:width" content="380">
+    <meta property="og:image:height" content="380">
+    <meta property="og:image:alt" content="facebook_partage">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Une partie de Puissance 4 ?">
+    <meta name="twitter:description" content="Venez affronter vos amis sur notre nouveau jeu fraîchement développé ou bien mettez à l'épreuve notre IA spécialement conçue.">
+    <meta name="twitter:site" content="https://twitter.com/Puiss4nce">
+    <meta name="twitter:image" content="http://rayans.promo-vesoul33.codeur.online/puiss4nce/media/thumbnail.png">
+    <meta name="twitter:creator" content="Puiss4nce">  
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
