--- a/player-player.html
+++ b/player-player.html
@@ -28,7 +28,7 @@
             </div>
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="col-10 col-sm-1 col-md-1 col-lg-1 player text-center mb-3 mb-sm-0 mb-md-0 mb-lg-0">
-                    <p class="joueur1">J1</p>
+                    <p class="joueur1 mt-1">J1</p>
                 </div>
                 <div id="game" class="col-12 col-sm-10 col-md-10 col-lg-10">
                     <table class="grille-jeux">
@@ -93,7 +93,7 @@
                 <div class="resultat d-none"></div>
                 
                 <div class="col-10 col-sm-1 col-md-1 col-lg-1 player text-center mt-3 mt-sm-0 mt-md-0 mt-lg-0">
-                    <p class="joueur2">J2</p>
+                    <p class="joueur2 pt-1">J2</p>
                 </div>
             </div>
         </div>
