Media queries tableau

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="icon" href="media/logo.png">
     <link rel="stylesheet" href="css/style.css">
-    <title>Puissance 4</title>
+    <title>PUISS4NCE</title>
 </head>
 
 <body class="bg-jv">
@@ -48,7 +48,7 @@
     <!-- ready to play -->
     <div class="container-fluid">
         <div class="container pt-5">
-            <div class="row d-flex justify-content-center mt-5">
+            <div class="row d-flex justify-content-center">
                 <h1><img src="media/title-pret.png" class="animated-bounce img-fluid"></h1>
             </div>
         </div>
@@ -59,7 +59,7 @@
         <div class="container bg-light-dark shadow-sm rounded">
             <div class="row mt-3 mb-3 text-center">
                 <div class="col-12 h4 text-light text-uppercase font-weight-bold mt-5">
-                    <p>Les règles sont les suivantes :</p>
+                    <p>Les règles sont les suivantes</p>
                 </div>
                 <div class="col-12 h5 text-light mt-3 mb-5">
                     <p>
@@ -70,7 +70,7 @@
                     </p>
                 </div>
                 <div class="col-12 h4 text-light text-uppercase font-weight-bold">
-                    <p>Les modes de jeux :</p>
+                    <p>Les modes de jeux</p>
                 </div>
                 <div class="col-6 mt-5">
                     <p class="text-light text-uppercase font-weight-bold">Joueurs vs Joueurs</p>
