--- a/player-player.html
+++ b/player-player.html
@@ -29,7 +29,7 @@
   
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>Puissance 4</title>
+    <title>PUISS4NCE</title>
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -46,7 +46,7 @@
     
     <div class="container-fluid">
         <div class="container">
-            <div class="text-center mt-lg-3 go">
+            <div class="text-center mt-4 mb-4 go">
                 <p><img src="../root/media/title-meilleur.png" alt="Que le meilleur gagne" width="915" height="113" class="img-fluid"</p>
             </div>
             <div class="row d-flex align-items-center justify-content-center">
@@ -115,14 +115,14 @@
                 </div>
                 <div class="resultat d-none"></div>
                 
-                <div class="col-10 col-sm-1 col-md-1 col-lg-1 player text-center mt-3 mt-sm-0 mt-md-0 mt-lg-0">
+                <div class="col-10 col-sm-1 col-md-1 col-lg-1 player text-center mt-4 mt-sm-0 mt-md-0 mt-lg-0">
                     <p class="joueur2 pt-1">J2</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid text-center pt-lg-3">
-        <div class="container">
+    <div class="container-fluid">
+        <div class="container text-center mt-4 mt-sm-4 mt-md-5 mt-lg-5">
             <button class="btn-go" Onclick="javascript:window.history.go(0)">
                 <p class="joueur pr-lg-4 pl-lg-4">Recommencer la partie</p>
             </button>
