--- a/player-ia.html
+++ b/player-ia.html
@@ -47,7 +47,9 @@
         
     <div class="container-fluid">
         <div class="container">
-            <div class="text-center mt-lg-3"><p>QUE LE MEILLEUR GAGNE</p></div>
+            <div class="text-center mt-4 mb-4 go">
+                <p><img src="../root/media/title-meilleur.png" alt="Que le meilleur gagne" width="915" height="113" class="img-fluid"</p>
+            </div>        
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="col-1 player-1 text-center">
                     <p class="joueur1">J1</p>
