--- a/player-player.html
+++ b/player-player.html
@@ -29,6 +29,7 @@
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="col-10 col-sm-1 col-md-1 col-lg-1 player text-center mb-3 mb-sm-0 mb-md-0 mb-lg-0">
                     <p class="joueur1">J1</p>
+                    <p class="resulj1"></p>
                 </div>
                 <div id="game" class="col-12 col-sm-10 col-md-10 col-lg-10">
                     <table class="grille-jeux">
@@ -94,6 +95,7 @@
                 
                 <div class="col-10 col-sm-1 col-md-1 col-lg-1 player text-center mt-3 mt-sm-0 mt-md-0 mt-lg-0">
                     <p class="joueur2">J2</p>
+                    <p class="resulj2"></p>
                 </div>
             </div>
         </div>
