Correction W3C + Ajout des meta + Ajout des Favicon 32x32 16x16

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="icon" href="media/logo.png">
-    <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" type="image/png" sizes="32x32" href="media/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="media/favicon-16x16.png">
     <title>PUISS4NCE</title>
 </head>
 
@@ -49,7 +50,7 @@
     <div class="container-fluid">
         <div class="container pt-5">
             <div class="row d-flex justify-content-center">
-                <h1><img src="media/title-pret.png" class="animated-bounce img-fluid"></h1>
+                <p><img src="media/title-pret.png" class="animated-bounce img-fluid" alt="Prêt pour une partie ?" width="915" height="113"></p>
             </div>
         </div>
     </div>
@@ -89,13 +90,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-6 text-center mt-5 mb-5">
-                    <a href="player-player.html" class="text-decoration-none"><button type="button"
-                            class="btn btn-danger btn-lg shadow-sm animated-bounce btn-block">J1 VS J2</button></a>
+                    <a href="player-player.html" class="btn btn-danger btn-lg shadow-sm btn-block text-decoration-none" role="button">J1 VS J2</a>
                 </div>
                 <div class="col-6 text-center mt-5 mb-5">
-                    <a href="player-ia.html" class="text-decoration-none"><button type="button"
-                            class="btn btn-warning text-light btn-lg shadow-sm animated-bounce btn-block">J1 VS
-                            IA</button></a>
+                    <a href="player-ia.html" class="btn btn-warning text-light btn-lg shadow-sm btn-block text-decoration-none" role="button">J1 VS IA</a>
                 </div>
             </div>
         </div>
