--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Une partie de Puissance 4 ?">
     <meta property="og:description" content="Venez affronter vos amis sur notre nouveau jeu fraîchement développé ou bien mettez à l'épreuve notre IA spécialement conçue.">
     <meta property="og:site_name" content="Puiss4nce">
-    <meta property="og:image" content="http://rayans.promo-vesoul33.codeur.online/puiss4nce/media/thumbnail.png">
+    <meta property="og:image" content="http://rayans.promo-vesoul33.codeur.online/puiss4nce/media/thumbnail.jpg">
     <meta property="og:image:width" content="380">
     <meta property="og:image:height" content="380">
     <meta property="og:image:alt" content="facebook_partage">
@@ -25,7 +25,7 @@
     <meta name="twitter:title" content="Une partie de Puissance 4 ?">
     <meta name="twitter:description" content="Venez affronter vos amis sur notre nouveau jeu fraîchement développé ou bien mettez à l'épreuve notre IA spécialement conçue.">
     <meta name="twitter:site" content="https://twitter.com/Puiss4nce">
-    <meta name="twitter:image" content="http://rayans.promo-vesoul33.codeur.online/puiss4nce/media/thumbnail.png">
+    <meta name="twitter:image" content="http://rayans.promo-vesoul33.codeur.online/puiss4nce/media/thumbnail.jpg">
     <meta name="twitter:creator" content="Puiss4nce">  
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
