Style du compteur de victoire

--- a/player-player.html
+++ b/player-player.html
@@ -57,7 +57,7 @@
                     <p class="resulj1"></p>
                 </div>
                 <div id="game" class="col-12 col-sm-10 col-md-10 col-lg-10">
-                    <table class="grille-jeux">
+                    <table class="grille-jeux shadow-lg">
                         <tr>
                             <td data-column="6" id='c00'></td>
                             <td data-column="0" id='c01'></td>
