--- a/player-player.html
+++ b/player-player.html
@@ -105,7 +105,7 @@
     </div>
 
  
-        <div class="animation" id="circle"></div>
+        <div class="azerty"></div>
 
 
     <!-- <script src="js/animation.js"></script>  -->
